--- a/cms/client/package.json
+++ b/cms/client/package.json
@@ -18,6 +18,7 @@
     "@tinymce/tinymce-react": "^4.1.0",
     "antd": "^4.21.5",
     "axios": "^0.27.2",
+    "core-js": "^3.24.1",
     "dayjs": "^1.11.4",
     "generate-password": "^1.7.0",
     "mongodb-client-encryption": "^2.1.0",
@@ -25,9 +26,11 @@
     "next": "^12.2.2",
     "next-transpile-modules": "^9.0.0",
     "react": "^18.2.0",
+    "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
-    "react-image-file-resizer": "^0.4.8"
+    "react-image-file-resizer": "^0.4.8",
+    "react-share-social": "^0.1.48"
   },
   "overrides": {
     "prosemirror-tables": "^1.1.1"
