--- a/cms/client/.env.local
+++ b/cms/client/.env.local
@@ -1,3 +1,3 @@
-API = http://localhost:8000/api/
-NEXT_PUBLIC_API = http://localhost:8000/api/
+API = https://nightking-cms.herokuapp.com/api
+NEXT_PUBLIC_API = https://nightking-cms.herokuapp.com/api
 
